--- a/Snippets/S - Images Adjustments.css
+++ b/Snippets/S - Images Adjustments.css
@@ -512,6 +512,12 @@ settings:
         description: "[Image Adjustments Snippet How-To Guide](https://publish.obsidian.md/slrvb-docs/ITS+Theme/Image+Adjustments)"
         markdown: true
     -
+        title: List Overlap Fix
+        description: Fix list bullets overlapping with images
+        id: img-adj-list
+        type: class-toggle
+        default: true
+    -
         title: Clear Images
         description: Push image under/over headings or horizontal lines
         id: img-adj-clears
@@ -560,3 +566,7 @@ settings:
         id: clear-heading-6
         type: class-toggle
 */
+/*Theme fixes*/
+.img-adj-list :is(ul, ol) {
+  display: flow-root;
+}
